add new md file.

--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -12,7 +12,7 @@
         <li><a class="pjaxlink" href="/pages/about.html">{{ site.locals.about }}</a></li>
       </ul>
       <div class="aside1_bottom">
-        <img src="/public/upload/qrcode_for_gh.jpg" width="100%">
+        <img src="/public/upload/gavatar.jpg" width="100%">
 	<br><br><br>
 	<table class="table table-condensed">
           <tr>
